--- a/force-app/main/default/classes/FormulaOneDAO.cls
+++ b/force-app/main/default/classes/FormulaOneDAO.cls
@@ -14,7 +14,7 @@ public class FormulaOneDAO {
                 };   
         set<String> rezSet = new set<String>();
         for(sObject tempObj: qrez){
-            rezSet.add(String.valueOf(tempOBj.get('Name')));
+            rezSet.add(String.valueOf(tempOBj.get('Grand_Prix__r.Name')));
         }
         return rezSet;
     }
@@ -29,8 +29,7 @@ public class FormulaOneDAO {
         //SELECT  Winer__r.Age__c, Podium_Second__r.Age__c, Podium_Third__r.Age__c FROM Race__c WHERE id = 'a007Q00000BTRTbQAP'
       
         return [SELECT Name, Age__C FROM Driver__c 
-                WHERE Id IN (SELECT 
-                Racer__c FROM Race_Result__c WHERE Grand_Prix__c = :raceId) 
+                WHERE Id IN (SELECT Racer__c FROM Race_Result__c WHERE Grand_Prix__c = :raceId) 
                 ORDER BY Age__c 
                 LIMIT 1];
     }
@@ -39,23 +38,24 @@ public class FormulaOneDAO {
         Map<String, list<String>> AllDriversByCircuit = new Map<String, list<String>>();
         List<sObject> raceRezList = new List<sObject>{
             Database.query('SELECT Grand_Prix__r.Name, Racer__r.Name FROM Race_Result__c ORDER BY Grand_Prix__r.Name')
-		};
+                };
         
         String oldRaceName = String.valueOf(raceRezList[0].get('Grand_Prix__r.Name'));
-	String newRaceName = oldRaceName;
-	List<String> curRaceDrivers = new List<String>();
-	    
+		String newRaceName = oldRaceName;
+		List<String> curRaceDrivers = new List<String>();
         For(sObject tempRaceRez: raceRezList){
+
             if(oldRaceName == newRaceName){
                 curRaceDrivers.add(String.valueOf(tempRaceRez.get('Racer__r.Name')));
             } else {
                 AllDriversByCircuit.put(oldRaceName, curRaceDrivers);
-		oldRaceName = newRaceName;
-		curRaceDrivers.clear();
+				oldRaceName = newRaceName;
+				curRaceDrivers.clear();
                 curRaceDrivers.add(String.valueOf(tempRaceRez.get('Racer__r.Name')));
             }
             newRaceName = String.valueOf(tempRaceRez.get('Grand_Prix__r.Name'));
         }
+        
         AllDriversByCircuit.put(oldRaceName, curRaceDrivers);
         return AllDriversByCircuit;
     }
