--- a/force-app/main/default/classes/FormulaOneDAO.cls
+++ b/force-app/main/default/classes/FormulaOneDAO.cls
@@ -4,19 +4,25 @@ public class FormulaOneDAO {
         return Database.query('SELECT Age__c, CreatedById, Name, First_Name__c, Full_Name__c, Hat_Tricks__c, Is_Qualified__c, LastModifiedById, Last_Name__c, OwnerId FROM Driver__c WHERE Id = \'' + driverId + '\'');
     }
     
+
     public static List<Race_Result__c> getRaceResults(Id driverId){
          return Database.query('SELECT CreatedById, Grand_Prix__c, Grid__c, Is_Fastest_Lap__c, LastModifiedById, Position__c, Name, Racer__c FROM Race_Result__c where Racer__c = \'' + driverId + '\'');
     }
+
     
     public static set<String> getDriverCircuits(Id driverId){
         List<sObject> qrez = new List<sObject>{
             Database.query('SELECT Grand_Prix__r.Name FROM Race_Result__c WHERE Racer__c = \'' + driverId + '\'')
                 };   
+                
         set<String> rezSet = new set<String>();
+
         for(sObject tempObj: qrez){
-            rezSet.add(String.valueOf(tempOBj.get('Grand_Prix__r.Name')));
+            rezSet.add(String.valueOf(tempOBj.get('Name')));
         }
+
         return rezSet;
+
     }
     public static Driver__c getYoungestDriverOnRace(Id raceId){
         //SELECT Name, Age__C FROM Driver__c WHERE 
@@ -29,12 +35,13 @@ public class FormulaOneDAO {
         //SELECT  Winer__r.Age__c, Podium_Second__r.Age__c, Podium_Third__r.Age__c FROM Race__c WHERE id = 'a007Q00000BTRTbQAP'
       
         return [SELECT Name, Age__C FROM Driver__c 
-                WHERE Id IN (SELECT Racer__c FROM Race_Result__c WHERE Grand_Prix__c = :raceId) 
+                WHERE Id IN (SELECT 
+                Racer__c FROM Race_Result__c WHERE Grand_Prix__c = :raceId) 
                 ORDER BY Age__c 
                 LIMIT 1];
     }
     
-    public Map<String, List<String>> getAllDriversByCircuit(){
+   /* public Map<String, List<String>> getAllDriversByCircuit(){
         Map<String, list<String>> AllDriversByCircuit = new Map<String, list<String>>();
         List<sObject> raceRezList = new List<sObject>{
             Database.query('SELECT Grand_Prix__r.Name, Racer__r.Name FROM Race_Result__c ORDER BY Grand_Prix__r.Name')
@@ -45,6 +52,7 @@ public class FormulaOneDAO {
 		List<String> curRaceDrivers = new List<String>();
         For(sObject tempRaceRez: raceRezList){
 
+			
             if(oldRaceName == newRaceName){
                 curRaceDrivers.add(String.valueOf(tempRaceRez.get('Racer__r.Name')));
             } else {
@@ -58,5 +66,20 @@ public class FormulaOneDAO {
         
         AllDriversByCircuit.put(oldRaceName, curRaceDrivers);
         return AllDriversByCircuit;
+    }*/
+    public Map<String, List<String>> getAllDriversByCircuit(){
+        Map<String, list<String>> AllDriversByCircuit = new Map<String, list<String>>();
+        List<Race_Result__c> raceRezList =[SELECT Grand_Prix__r.Name, Racer__r.Name FROM Race_Result__c];
+        
+        For(Race_Result__c tempRaceRez: raceRezList){
+            if(AllDriversByCircuit.containsKey(tempRaceRez.Grand_Prix__r.Name)){
+                AllDriversByCircuit.get(tempRaceRez.Grand_Prix__r.Name).add(tempRaceRez.Racer__r.Name);
+            } else {
+                AllDriversByCircuit.put(tempRaceRez.Grand_Prix__r.Name, new List<String>{tempRaceRez.Racer__r.Name});
+            }
+        }
+       
+        return AllDriversByCircuit;
     }
+
 }
