SOQL code optimisation

--- a/force-app/main/default/classes/FormulaOneDAO.cls
+++ b/force-app/main/default/classes/FormulaOneDAO.cls
@@ -1,31 +1,29 @@
 public class FormulaOneDAO {
     // test driverid = a027Q0000061zcxQAA for Hadgehoc, Sonic
     public static Driver__c getDriver(Id driverId){
-        return Database.query('SELECT Age__c, CreatedById, Name, First_Name__c, Full_Name__c, Hat_Tricks__c, Is_Qualified__c, LastModifiedById, Last_Name__c, OwnerId FROM Driver__c WHERE Id = \'' + driverId + '\'');
+        return [SELECT Age__c, CreatedById, Name, First_Name__c, Full_Name__c, Hat_Tricks__c, Is_Qualified__c, LastModifiedById, Last_Name__c, OwnerId FROM Driver__c WHERE Id = :driverId];
     }
     
 
     public static List<Race_Result__c> getRaceResults(Id driverId){
-         return Database.query('SELECT CreatedById, Grand_Prix__c, Grid__c, Is_Fastest_Lap__c, LastModifiedById, Position__c, Name, Racer__c FROM Race_Result__c where Racer__c = \'' + driverId + '\'');
+         return [SELECT CreatedById, Grand_Prix__c, Grid__c, Is_Fastest_Lap__c, LastModifiedById, Position__c, Name, Racer__c FROM Race_Result__c where Racer__c = :driverId];
     }
 
     
     public static set<String> getDriverCircuits(Id driverId){
-        List<sObject> qrez = new List<sObject>{
-            Database.query('SELECT Grand_Prix__r.Name FROM Race_Result__c WHERE Racer__c = \'' + driverId + '\'')
-                };   
+        List<sObject> qrez = [SELECT Grand_Prix__r.Name FROM Race_Result__c WHERE Racer__c = :driverId];
                 
         set<String> rezSet = new set<String>();
 
         for(sObject tempObj: qrez){
-            rezSet.add(String.valueOf(tempOBj.get('Name')));
+            rezSet.add(String.valueOf(tempOBj.Grand_Prix__r.Name));
         }
 
         return rezSet;
 
     }
-    public static Driver__c getYoungestDriverOnRace(Id raceId){
-        //SELECT Name, Age__C FROM Driver__c WHERE 
+
+    //SELECT Name, Age__C FROM Driver__c WHERE 
 		//Id IN (SELECT winer__c FROM Race__c WHERE id = 'a007Q00000BTRTbQAP') OR
 		//Id IN (SELECT Podium_Second__c FROM Race__c WHERE id = 'a007Q00000BTRTbQAP') OR
 		//Id IN (SELECT Podium_Third__c FROM Race__c WHERE id = 'a007Q00000BTRTbQAP')
@@ -34,6 +32,7 @@ public class FormulaOneDAO {
       
         //SELECT  Winer__r.Age__c, Podium_Second__r.Age__c, Podium_Third__r.Age__c FROM Race__c WHERE id = 'a007Q00000BTRTbQAP'
       
+    public static Driver__c getYoungestDriverOnRace(Id raceId){
         return [SELECT Name, Age__C FROM Driver__c 
                 WHERE Id IN (SELECT 
                 Racer__c FROM Race_Result__c WHERE Grand_Prix__c = :raceId) 
