--- a/force-app/main/default/classes/raceResultTriggerHandlerTest.cls
+++ b/force-app/main/default/classes/raceResultTriggerHandlerTest.cls
@@ -4,13 +4,6 @@ private class raceResultTriggerHandlerTest{
     static void dataSetup(){     
         
       List<Driver__c> driversList = new List<Driver__c>();
-     /* for (Integer i = 0; i==6; i++) {
-          driversList.add(new Driver__c(
-              First_Name__c = 'Test_' + i,
-              Last_Name__c = 'Driver_' + i,
-              Age__c = i + 19
-          ));
-      }  */
       driversList.add(new Driver__c(
           First_Name__c = 'Test_1',
           Last_Name__c = 'Driver_1',
@@ -35,18 +28,6 @@ private class raceResultTriggerHandlerTest{
           Age__c =  33,
           Hat_Tricks__c = 0,
           Is_Qualified__c = True));
-/*    driversList.add(new Driver__c(
-          First_Name__c = 'Test_5',
-          Last_Name__c = 'Driver_5',
-          Age__c =  23,
-          Hat_Tricks__c = 0,
-          Is_Qualified__c = True));
-    driversList.add(new Driver__c(
-          First_Name__c = 'Test_6',
-          Last_Name__c = 'Driver_6',
-          Age__c =  22,
-          Hat_Tricks__c = 0,
-          Is_Qualified__c = True));*/
       insert driversList;
         
       List<Race__c> racesList = new List<Race__c>();
@@ -97,7 +78,7 @@ private class raceResultTriggerHandlerTest{
     }
     
     @isTest
-    static void driverHatTricksUpd(){
+    static void driverHatTricksUpdTest(){
         Race__c race = [SELECT id FROM Race__c LIMIT 1];
         id raceId = race.id;
         Driver__c driver = [SELECT id FROM Driver__c WHERE First_Name__c = 'Test_HatTricks' LIMIT 1];
@@ -126,8 +107,51 @@ private class raceResultTriggerHandlerTest{
     }
     
     @isTest
-    static void driverPositionCheck(){
-    
+    static void driverPositionCheckTest(){
+    	   List<Race_Result__c> raceResultsQ = [
+            SELECT Grand_Prix__r.Name, Racer__r.id, Position__c
+            FROM Race_Result__c 
+            WHERE Grand_Prix__r.name = 'Grond_prix_name_1' 
+            LIMIT 2];
+        System.debug(raceResultsQ);
+
+        List<Race_Result__c> failDriverResult = new List<Race_Result__c>();
+        List<Race_Result__c> failPositionResult = new List<Race_Result__c>();
+		Id driverid = String.valueOf(raceResultsQ[0].Racer__r.get('id'));
+        System.debug(driverid);
+        for (Race_Result__c result : raceResultsQ) {
+            if (result.Position__c != 1) {
+                result.Position__c = 1;
+                failPositionResult.add(result);
+            }
+			if (result.Racer__r.id != driverid) {
+                result.Racer__r.id = driverid;
+                failDriverResult.add(result);
+            }
+        }
+
+
+        Test.startTest();
+        Database.SaveResult[] failDriverResultdb = Database.update(failDriverResult, false);
+        Database.SaveResult[] failPositionResultdb = Database.update(failPositionResult, false);
+        Test.stopTest();
+
+        for (Database.SaveResult dbResult : failPositionResultdb) {
+            If(dbResult.getErrors().size() > 0){
+            System.assertEquals(false, dbResult.isSuccess());
+			System.debug(dbResult.getErrors()[0].getMessage());
+            System.assertEquals('Where two or more drivers at this one position in the current race!', dbResult.getErrors()[0].getMessage());
+            }
+        }
+
+        for (Database.SaveResult dbResult : failDriverResultdb) {
+ 			If(dbResult.getErrors().size() > 0){
+            System.assertEquals(false, dbResult.isSuccess());
+			System.debug(dbResult.getErrors()[0].getMessage());
+            System.assertEquals('This driver already participated in this race but it has a different position!', dbResult.getErrors()[0].getMessage());
+            }
+        }
     }
+    
     
 }
